When append node group from asset browser, all sockets on the node group dissapear. #94408

Closed
opened 2021-12-27 09:22:08 +01:00 by Marco Hoo · 8 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-26 20:08, hash: 20b438d523
Worked: (newest version of Blender that worked as expected)

Short description of errorbandicam 2021-12-27 16-18-23-860.mp4
When append node group from asset browser, all sockets on the node group dissapear. Check out the video for more details.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-12-26 20:08, hash: `20b438d523` Worked: (newest version of Blender that worked as expected) **Short description of error**[bandicam 2021-12-27 16-18-23-860.mp4](https://archive.blender.org/developer/F12777593/bandicam_2021-12-27_16-18-23-860.mp4) When append node group from asset browser, all sockets on the node group dissapear. Check out the video for more details. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @MarcoHoo-3

Added subscriber: @MarcoHoo-3
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report. I'm guessing this might have been caused recently, I'll bisect it.

Thanks for the report. I'm guessing this might have been caused recently, I'll bisect it.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Caused by 7e712b2d6a
Any node topology change afterwards causes the node to update and get its sockets, but there is no redraw when it's added.
I would expect that to be handled by ED_node_tree_propagate_change. node_group_update is still called, so the sockets are still getting added, the editor just isn't redrawn.
I'm guessing tree_changed_fn isn't getting called by the node tree updater for some reason. I looked at it a bit and didn't see why yet.

Caused by 7e712b2d6a Any node topology change afterwards causes the node to update and get its sockets, but there is no redraw when it's added. I would expect that to be handled by `ED_node_tree_propagate_change`. `node_group_update` is still called, so the sockets are still getting added, the editor just isn't redrawn. I'm guessing `tree_changed_fn` isn't getting called by the node tree updater for some reason. I looked at it a bit and didn't see why yet.

This issue was referenced by b29e33caa2

This issue was referenced by b29e33caa2b6102b813a8bf8d443180c8815c184
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-12-28 11:21:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94408
No description provided.