Fix T94408: missing sockets after adding node group